--- a/monnuage.css
+++ b/monnuage.css
@@ -8,7 +8,7 @@ font-size: 1rem;
 line-height: 2rem;
 letter-spacing: 0.01rem;
 color: #5A5151;
-background-color: #f5f5f5;
+background-color: #DDD3D3;
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
 text-rendering: optimizeLegibility;
