--- a/monnuage.css
+++ b/monnuage.css
@@ -1,17 +1,15 @@
-
 body{
-
-font-family: 'RobotoDraft', 'Roboto', 'Helvetica Neue, Helvetica, Arial', sans-serif;
-font-style: normal;
-font-weight: 300;
-font-size: 1rem;
-line-height: 2rem;
-letter-spacing: 0.01rem;
-color: #5A5151;
-background-color: #DDD3D3;
--webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
-text-rendering: optimizeLegibility;
+    font-family: 'RobotoDraft', 'Roboto', 'Helvetica Neue, Helvetica, Arial', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 1rem;
+    line-height: 2rem;
+    letter-spacing: 0.01rem;
+    color: #5A5151;
+    background-color: #DDD3D3;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
 }
 
 #linkdossier{
@@ -23,19 +21,22 @@ text-rendering: optimizeLegibility;
 }
 
 .line.dossier {
-display: flex;
-cursor: pointer;
+    display: block;
+    height: 30px;
+    background-color: rgba(239, 236, 236, 0.26);
+    margin-bottom: 7px;
+    cursor: pointer;
 }
 
 #tableau{
--webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
--moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
-max-width: 960px;
-background-color: #ffffff;
-border-color: gray;
-margin-left: auto;
-margin-right: auto;
+    -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
+    max-width: 960px;
+    background-color: #ffffff;
+    border-color: gray;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .col-name {
@@ -43,22 +44,26 @@ margin-right: auto;
     float: left;
     text-overflow: ellipsis;
     white-space: nowrap;    overflow: hidden;
+    height: 30px;
 }
 
 .col-date {
-    width: 13%;  float: left;
+    width: 13%;  
+    height: 30px;
+    float: left;
     font-size: 0.9em;
 }
 
 .col-type {
     width: 17%;  float: left;
     font-size: 0.9em;
-    margin-left: 10px;
+    height: 30px;
 }
 
 .col-taille {
     width: 10%;  float: left;
     font-size: 0.9em;
+    height: 30px;
 }
 
 .col-dossier {
@@ -66,8 +71,8 @@ margin-right: auto;
 }
 
 .line.fichier {
-    display: flex;
-    max-height: 30px;
+    display: block;
+    height: 30px;
     cursor: default;    
 }
 
@@ -76,29 +81,29 @@ margin-right: auto;
     -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
     max-width: 960px;  
-    background-color: #FDFBFB;  border-color: gray;
+    background-color: #FDFBFB;  
+    border-color: gray;
 }
 
 .headTab {
-    display: flex;
-    margin-left: 20px;
+    display: block;
+    /* padding-left: 5px; */
+    /* padding-right: 5px; */
     font-weight: bold;
     cursor: default;
+    height: 30px;
 }
 
 .headRetour {
-    display: flex;
-    margin-left: 20px;
+    display: block;
+    /* margin-left: 20px; */
     font-weight: bold;
     cursor: pointer;
+    height: 30px;
 }
 
 .headRetour:hover {
-    display: flex;
-    margin-left: 20px;
-    font-weight: bold;
-    cursor: pointer;
-    font-size: 1.1rem;
+    font-size: 1.2em;
 }
 
 a {
@@ -113,38 +118,33 @@ a {
 
 
 .pop {
-display: none;
-width: 300px;
-position: absolute;
-z-index: 99999;
-background: #EEEFEB;
-min-width: 100px;
-color: #000000;
-margin: 0px;
--webkit-box-shadow: 5px 5px 5px 5px rgba(164, 164, 164, 1);
-box-shadow: 5px 3px 5px 1px rgba(164, 164, 164, 1);
-border-top: solid 1px rgba(164, 164, 164, 0.66);
-border-left: solid 1px rgba(164, 164, 164, 0.66);
-
+    display: none;
+    width: 300px;
+    position: absolute;
+    z-index: 99999;
+    background: #EEEFEB;
+    min-width: 100px;
+    color: #000000;
+    margin: 0px;
+    -webkit-box-shadow: 5px 5px 5px 5px rgba(164, 164, 164, 1);
+    box-shadow: 5px 3px 5px 1px rgba(164, 164, 164, 1);
+    border-top: solid 1px rgba(164, 164, 164, 0.66);
+    border-left: solid 1px rgba(164, 164, 164, 0.66);
 }
 
 .linePop:hover {
-background-color: rgba(123, 183, 234, 0.33);
-cursor: pointer;
-background-clip: content-box;
-border: solid 1px rgba(123, 183, 234, 1);
-/* text-align: center; */
-/* font-weight: bold; */
+    background-color: rgba(123, 183, 234, 0.33);
+    cursor: pointer;
+    background-clip: content-box;
+    border: solid 1px rgba(123, 183, 234, 1);
 }
 
 .linePop {
-/* width: 100%; */
-background-clip: content-box;
-/* padding: 0.5%; */
-text-align: left;
-margin-left: 3%;
-font-family: inherit;
-font-size: medium;
+    background-clip: content-box;
+    text-align: left;
+    margin-left: 3%;
+    font-family: inherit;
+    font-size: medium;
 }
 
 .lineTitle {
@@ -156,4 +156,50 @@ font-size: medium;
     white-space: nowrap;    overflow: hidden;
     max-height: 30px;
     cursor: default;
+}
+
+@media screen and (max-width: 768px) {
+  body{
+      margin:0px;
+  }
+  .headTab {
+      padding-left: 5px;
+      padding-right: 5px;
+      display:none;
+  }
+ 
+  .col-name {
+      width: 60%;
+      max-height: 30px;
+      float: left;
+      text-overflow: ellipsis;
+      white-space: nowrap;    overflow: hidden;
+  }
+
+  .col-date {
+      width: 40%;  float: left;
+      max-height: 30px;
+      font-size: 0.9em;
+  }
+
+  .col-type {
+      width: 30%;  float: left;
+      font-size: 0.9em;
+      margin-left: 10px;
+      max-height: 30px;
+  }
+
+  .col-taille {
+      width: 40%;  
+      float: right;
+      font-size: 0.9em;
+      max-height: 30px;
+  }
+
+  .line.fichier {
+      min-height: 60px;
+      background-color: rgba(239, 236, 236, 0.26);
+      margin-bottom: 7px;
+  }
+   
 }
